--- a/index.html
+++ b/index.html
@@ -7,34 +7,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile Pro</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="main">
-        <div class="titleImg">
-            <img src="WhatsApp Image 2023-01-26 at 15.34.41.jpeg" alt="">
-            <h2>José Protásio dos Santos</h2>
-            <p>Software Developer</p>
-            <hr>
+
+    <header>
+        <div class="menu">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">Home</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Services <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https:wa.me/qr/U73AQLUIMS2D1">Contact me</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                More
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <div class="content">
+        <div class="coderContent">
+            <div class="profileImg">
+                <a href="https://github.com/jose-protasio"><img src="WhatsApp Image 2023-01-26 at 15.34.41.jpeg" alt="José's picture"></a>
+                <h2>José Protásio dos Santos</h2>
+                <p>Software Developer</p>
+            </div>
+
+            <div class="coder">
+                <h2>&ltCoder/&gt</h2>
+                <p>Front End Developer who focuses <br>on writing clean, elegant and <br> efficient code</p>
+            </div>
         </div>
 
-        <div class="imgs">
-            <img src="instagram.png" alt="">
-            <img src="github.png" alt="">
-            <img src="html-5.png" alt="">
-            <img src="js.png" alt="">
-            <img src="css-3.png" alt="">
-            <img src="science.png" alt="">
+        <hr>
+
+        <div class="skills">
+            <div class="imgTitle">
+                <h2>Skills</h2>
+                <!-- <img src="instagram.png" alt=""> -->
+                <!-- <img src="github.png" alt=""> -->
+                <img src="html-5.png" alt="">
+                <img src="css-3.png" alt="">
+                <img src="js.png" alt="">
+                <img src="science.png" alt="">
+                <img src="nodejss.png" alt="">
+                <img src="seleniumm.png" alt="">
+            </div>
         </div>
     </div>
 
     <div class="intro">
-        <h1>Apresentação</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut deserunt commodi voluptatibus eius possimus quaerat aperiam tenetur, ab repellendus necessitatibus beatae reiciendis animi architecto quo, totam accusamus facilis in amet?</p>
+        <h1>About me</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut deserunt Lorem ipsum Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laborum quasi omnis consectetur velit repellendus. Saepe beatae magnam ratione
+            doloremque nisi amet explicabo nihil maiores quia accusamus. Non illo itaque excepturi! dolor sit, amet
+            consectetur adipisicing elit. Sequi laudantium quis alias quibusdam velit a nobis culpa fugit incidunt
+            minima accusantium id dicta, reiciendis illum ea atque. Voluptatum, excepturi modi? commodi voluptatibus
+            eius possimus quaerat aperiam tenetur, ab repellendus necessitatibus beatae reiciendis Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Tempore dicta velit dolor explicabo fugiat placeat, non vero hic impedit
+            tenetur voluptas iste molestias asperiores in culpa! Consequatur ex vitae maxime. Lorem ipsum dolor, sit
+            amet consectetur adipisicing elit. Ipsum voluptatum eum fuga adipisci enim, assumenda odit molestiae
+            repellendus minima repellat at temporibus, pariatur consequatur ex ratione inventore error dicta reiciendis.
+            animiarchitecto quo, totam accusamus facilis in amet?</p>
     </div>
+
+    <section class="section-1">
+        <div>
+            something
+        </div>
+    </section>
 
     </div>
 </body>
 <script src="script.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
 
 </html>
