creation of footer and styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="menu">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -52,7 +51,8 @@
     <div class="content">
         <div class="coderContent">
             <div class="profileImg">
-                <a href="https://github.com/jose-protasio"><img src="WhatsApp Image 2023-01-26 at 15.34.41.jpeg" alt="José's picture"></a>
+                <a href="https://github.com/jose-protasio" target="_blank"><img
+                        src="WhatsApp Image 2023-01-26 at 15.34.41.jpeg" alt="José's picture"></a>
                 <h2>José Protásio dos Santos</h2>
                 <p>Software Developer</p>
             </div>
@@ -95,11 +95,41 @@
             animiarchitecto quo, totam accusamus facilis in amet?</p>
     </div>
 
-    <section class="section-1">
-        <div>
-            something
+    <footer>
+        <div class="footerContent">
+
+            <div class="logoFooter">
+                <a href="https://github.com/jose-protasio" target="_blank"><img src="joselogo.jpg" alt=""></a>
+                <p>José Protásio dos Santos</p>
+            </div>
+
+            <div class="about">
+                <h2>About me</h2>
+                <p>Home</p>
+                <p>Social Media</p>
+            </div>
+
+            <div class="solutions">
+                <h2>Solutions</h2>
+                <p>Blog</p>
+                <p>Contact</p>
+            </div>
+
+            <div class="follow">
+                <h2>Follow me</h2>
+                <div>
+                    <img src="icons8-facebook-64.png" alt="">
+                    <img src="icons8-github-64.png" alt="">
+                    <img src="icons8-linkedin-circundado-64.png" alt="">
+                    <img src="icons8-instagram-64.png" alt="">
+                </div>
+                <p>Phone: (64) 993138737</p>
+                <p>Email: joseprosantos038@gmail.com</p>
+            </div>
+
+
         </div>
-    </section>
+    </footer>
 
     </div>
 </body>
