link of social media and contacts

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https:wa.me/qr/U73AQLUIMS2D1">Contact me</a>
+                            <a class="nav-link" href="https:wa.me/qr/U73AQLUIMS2D1" target="_blank">Contact me</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -66,8 +66,8 @@
         <hr>
 
         <div class="skills">
+
             <div class="imgTitle">
-                <h2>Skills</h2>
                 <!-- <img src="instagram.png" alt=""> -->
                 <!-- <img src="github.png" alt=""> -->
                 <img src="html-5.png" alt="">
@@ -82,17 +82,11 @@
 
     <div class="intro">
         <h1>About me</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut deserunt Lorem ipsum Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Laborum quasi omnis consectetur velit repellendus. Saepe beatae magnam ratione
-            doloremque nisi amet explicabo nihil maiores quia accusamus. Non illo itaque excepturi! dolor sit, amet
-            consectetur adipisicing elit. Sequi laudantium quis alias quibusdam velit a nobis culpa fugit incidunt
-            minima accusantium id dicta, reiciendis illum ea atque. Voluptatum, excepturi modi? commodi voluptatibus
-            eius possimus quaerat aperiam tenetur, ab repellendus necessitatibus beatae reiciendis Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Tempore dicta velit dolor explicabo fugiat placeat, non vero hic impedit
-            tenetur voluptas iste molestias asperiores in culpa! Consequatur ex vitae maxime. Lorem ipsum dolor, sit
-            amet consectetur adipisicing elit. Ipsum voluptatum eum fuga adipisci enim, assumenda odit molestiae
-            repellendus minima repellat at temporibus, pariatur consequatur ex ratione inventore error dicta reiciendis.
-            animiarchitecto quo, totam accusamus facilis in amet?</p>
+        <p>
+            Hello, my name is José and I help people succeed with their projects by applying my programming skills and knowledge. As someone who loves coding, I see that a clean and performant code is of paramount importance for the success of a system, so I will always put into practice all the knowledge I gained in my career as a Software Developer.
+With the beginning of the pandemic, the reality of Caldas Novas (Go) changed drastically, as being a tourist city, the city's economy depends exclusively on people, however, the borders were closed to control Covid-19, which left Caldas Novas scarce jobs.
+As a son and student, I always had the dream of conquering my own things and helping my family. It was then that I made the most difficult and important decision of my life: to go to Blumenau-Sc in search of opportunities in the technology field. So I fell in love with programming, because I've always been very curious to know how things work behind the scenes. During this time living here, I worked in two technology companies, with Html, CSS, Javascript, ReactJs and NodeJs, acting as Junior Front-End Developer.
+        </p>
     </div>
 
     <footer>
@@ -118,10 +112,10 @@
             <div class="follow">
                 <h2>Follow me</h2>
                 <div>
-                    <img src="icons8-facebook-64.png" alt="">
-                    <img src="icons8-github-64.png" alt="">
-                    <img src="icons8-linkedin-circundado-64.png" alt="">
-                    <img src="icons8-instagram-64.png" alt="">
+                    <a href="https://www.facebook.com/profile.php?id=100015248027613" target="_blank"><img src="icons8-facebook-64.png" alt=""></a>
+                    <a href="https://github.com/jose-protasio" target="_blank"><img src="icons8-github-64.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/jos%C3%A9-prot%C3%A1sio-aabaab227/" target="_blank"><img src="icons8-linkedin-circundado-64.png" alt=""></a>
+                    <a href="https://www.instagram.com/zehsantoss/" target="_blank"><img src="icons8-instagram-64.png" alt=""></a>
                 </div>
                 <p>Phone: (64) 993138737</p>
                 <p>Email: joseprosantos038@gmail.com</p>
