--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <hr>
 
         <div class="skills">
-
+            <h2>Hard Skills</h2>
             <div class="imgTitle">
                 <!-- <img src="instagram.png" alt=""> -->
                 <!-- <img src="github.png" alt=""> -->
@@ -83,9 +83,18 @@
     <div class="intro">
         <h1>About me</h1>
         <p>
-            Hello, my name is José and I help people succeed with their projects by applying my programming skills and knowledge. As someone who loves coding, I see that a clean and performant code is of paramount importance for the success of a system, so I will always put into practice all the knowledge I gained in my career as a Software Developer.
-With the beginning of the pandemic, the reality of Caldas Novas (Go) changed drastically, as being a tourist city, the city's economy depends exclusively on people, however, the borders were closed to control Covid-19, which left Caldas Novas scarce jobs.
-As a son and student, I always had the dream of conquering my own things and helping my family. It was then that I made the most difficult and important decision of my life: to go to Blumenau-Sc in search of opportunities in the technology field. So I fell in love with programming, because I've always been very curious to know how things work behind the scenes. During this time living here, I worked in two technology companies, with Html, CSS, Javascript, ReactJs and NodeJs, acting as Junior Front-End Developer.
+            Hello, my name is José and I help people succeed with their projects by applying my programming skills and
+            knowledge. As someone who loves coding, I see that a clean and performant code is of paramount importance
+            for the success of a system, so I will always put into practice all the knowledge I gained in my career as a
+            Software Developer.
+            With the beginning of the pandemic, the reality of Caldas Novas (Go) changed drastically, as being a tourist
+            city, the city's economy depends exclusively on people, however, the borders were closed to control
+            Covid-19, which left Caldas Novas scarce jobs.
+            As a son and student, I always had the dream of conquering my own things and helping my family. It was then
+            that I made the most difficult and important decision of my life: to go to Blumenau-Sc in search of
+            opportunities in the technology field. So I fell in love with programming, because I've always been very
+            curious to know how things work behind the scenes. During this time living here, I worked in two technology
+            companies, with Html, CSS, Javascript, ReactJs and NodeJs, acting as Junior Front-End Developer.
         </p>
     </div>
 
@@ -99,7 +108,7 @@ As a son and student, I always had the dream of conquering my own things and hel
 
             <div class="about">
                 <h2>About me</h2>
-                <p>Home</p>
+                <a href="https://josesprofilepro.netlify.app/"><p>Home</p></a>
                 <p>Social Media</p>
             </div>
 
@@ -112,10 +121,14 @@ As a son and student, I always had the dream of conquering my own things and hel
             <div class="follow">
                 <h2>Follow me</h2>
                 <div>
-                    <a href="https://www.facebook.com/profile.php?id=100015248027613" target="_blank"><img src="icons8-facebook-64.png" alt=""></a>
-                    <a href="https://github.com/jose-protasio" target="_blank"><img src="icons8-github-64.png" alt=""></a>
-                    <a href="https://www.linkedin.com/in/jos%C3%A9-prot%C3%A1sio-aabaab227/" target="_blank"><img src="icons8-linkedin-circundado-64.png" alt=""></a>
-                    <a href="https://www.instagram.com/zehsantoss/" target="_blank"><img src="icons8-instagram-64.png" alt=""></a>
+                    <a href="https://www.facebook.com/profile.php?id=100015248027613" target="_blank"><img
+                            src="icons8-facebook-64.png" alt=""></a>
+                    <a href="https://github.com/jose-protasio" target="_blank"><img src="icons8-github-64.png"
+                            alt=""></a>
+                    <a href="https://www.linkedin.com/in/jos%C3%A9-prot%C3%A1sio-aabaab227/" target="_blank"><img
+                            src="icons8-linkedin-circundado-64.png" alt=""></a>
+                    <a href="https://www.instagram.com/zehsantoss/" target="_blank"><img src="icons8-instagram-64.png"
+                            alt=""></a>
                 </div>
                 <p>Phone: (64) 993138737</p>
                 <p>Email: joseprosantos038@gmail.com</p>
