--- a/index.html
+++ b/index.html
@@ -65,13 +65,10 @@
             </div>
         </div>
 
-        <hr>
 
         <div class="skills">
             <h2>Hard Skills</h2>
             <div class="imgTitle">
-                <!-- <img src="instagram.png" alt=""> -->
-                <!-- <img src="github.png" alt=""> -->
                 <img src="html-5.png" alt="">
                 <img src="css-3.png" alt="">
                 <img src="js.png" alt="">
@@ -87,7 +84,7 @@
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Click to know more
+                        Click to know more about José
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
