--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile Pro</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -79,52 +82,39 @@
         </div>
     </div>
 
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Click to know more about José
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                    data-bs-parent="#accordionExample">
-                    <div class="intro">
-                        <h1>About me</h1>
-    <p>
-        Hello, my name is José and I help people succeed with their projects by applying my programming skills and
-        knowledge. As someone who loves coding, I see that a clean and performant code is of paramount importance
-        for the success of a system, so I will always put into practice all the knowledge I gained in my career as a
-        Software Developer.
-        With the beginning of the pandemic, the reality of Caldas Novas (Go) changed drastically, as being a tourist
-        city, the city's economy depends exclusively on people, however, the borders were closed to control
-        Covid-19, which left Caldas Novas scarce jobs.
-        As a son and student, I always had the dream of conquering my own things and helping my family. It was then
-        that I made the most difficult and important decision of my life: to go to Blumenau-Sc in search of
-        opportunities in the technology field. So I fell in love with programming, because I've always been very
-        curious to know how things work behind the scenes. During this time living here, I worked in two technology
-        companies, with Html, CSS, Javascript, ReactJs and NodeJs, acting as Junior Front-End Developer.
-    </p>
-                    </div>
-                </div>
+    <!-- card -->
+    <div class="flip">
+        <div class="content">
+            <div class="front">
+                <h2>Hover Me</h2>
+                <p style="margin-top: 30px;">...and know more</p>
+            </div>
+            <div class="back">
+                <h2>About me</h2>
+                <p>
+                    Hello, my name is José and I help people succeed with their projects by applying my programming
+                    skills and
+                    knowledge. As someone who loves coding, I see that a clean and performant code is of paramount
+                    importance
+                    for the success of a system, so I will always put into practice all the knowledge I gained in my
+                    career as a
+                    Software Developer.
+                    With the beginning of the pandemic, the reality of Caldas Novas (Go) changed drastically, as being a
+                    tourist
+                    city, the city's economy depends exclusively on people, however, the borders were closed to control
+                    Covid-19, which left Caldas Novas scarce jobs.
+                    As a son and student, I always had the dream of conquering my own things and helping my family. It
+                    was then
+                    that I made the most difficult and important decision of my life: to go to Blumenau-Sc in search of
+                    opportunities in the technology field. So I fell in love with programming, because I've always been
+                    very
+                    curious to know how things work behind the scenes. During this time living here, I worked in two
+                    technology
+                    companies, with Html, CSS, Javascript, ReactJs and NodeJs, acting as Junior Front-End Developer.
+                </p>
             </div>
         </div>
-    
-    <!-- <h1>About me</h1>
-    <p>
-        Hello, my name is José and I help people succeed with their projects by applying my programming skills and
-        knowledge. As someone who loves coding, I see that a clean and performant code is of paramount importance
-        for the success of a system, so I will always put into practice all the knowledge I gained in my career as a
-        Software Developer.
-        With the beginning of the pandemic, the reality of Caldas Novas (Go) changed drastically, as being a tourist
-        city, the city's economy depends exclusively on people, however, the borders were closed to control
-        Covid-19, which left Caldas Novas scarce jobs.
-        As a son and student, I always had the dream of conquering my own things and helping my family. It was then
-        that I made the most difficult and important decision of my life: to go to Blumenau-Sc in search of
-        opportunities in the technology field. So I fell in love with programming, because I've always been very
-        curious to know how things work behind the scenes. During this time living here, I worked in two technology
-        companies, with Html, CSS, Javascript, ReactJs and NodeJs, acting as Junior Front-End Developer.
-    </p> -->
+    </div>
     </div>
 
     <footer>
