--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="card.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
@@ -62,9 +63,40 @@
                 <p>Front-End Software Developer</p>
             </div>
 
+
+            <!-- <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <p class="title">WHAT AM I?</p>
+                        <p>Hover Me</p>
+                    </div>
+                    <div class="flip-card-back">
+                        <h2>&ltCoder/&gt</h2>
+                        <p>Front End Developer who focuses <br>on writing clean, elegant and <br> efficient code</p>
+                    </div>
+                </div>
+            </div> -->
+
+
+
+
+
+
+
+
             <div class="coder">
-                <h2>&ltCoder/&gt</h2>
-                <p>Front End Developer who focuses <br>on writing clean, elegant and <br> efficient code</p>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <p class="title">WHAT AM I?</p>
+                            <p>Hover Me</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <h2>&ltCoder/&gt</h2>
+                            <p>Front End Developer who focuses <br>on writing clean, elegant and <br> efficient code</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
