card and header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile Pro</title>
+    <title>José's Profile Pro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -19,6 +19,8 @@
 
 <body>
     <header>
+
+        <!-- Nav Bar -->
         <div class="menu">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">Home</a>
@@ -54,6 +56,7 @@
         </div>
     </header>
 
+    <!-- Profile photo and info -->
     <div class="content">
         <div class="coderContent">
             <div class="profileImg">
@@ -63,27 +66,7 @@
                 <p>Front-End Software Developer</p>
             </div>
 
-
-            <!-- <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <p class="title">WHAT AM I?</p>
-                        <p>Hover Me</p>
-                    </div>
-                    <div class="flip-card-back">
-                        <h2>&ltCoder/&gt</h2>
-                        <p>Front End Developer who focuses <br>on writing clean, elegant and <br> efficient code</p>
-                    </div>
-                </div>
-            </div> -->
-
-
-
-
-
-
-
-
+            <!-- Card Coder -->
             <div class="coder">
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -100,7 +83,7 @@
             </div>
         </div>
 
-
+        <!-- Skills -->
         <div class="skills">
             <h2>Hard Skills</h2>
             <div class="imgTitle">
@@ -114,7 +97,7 @@
         </div>
     </div>
 
-    <!-- card -->
+    <!-- card about me -->
     <div class="flip">
         <div class="content">
             <div class="front">
@@ -186,7 +169,6 @@
                 <p>Phone: (64) 993138737</p>
                 <p>Email: joseprosantos038@gmail.com</p>
             </div>
-
 
         </div>
     </footer>
