--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="coderContent">
             <div class="profileImg">
                 <a href="https://github.com/jose-protasio" target="_blank"><img
-                        src="WhatsApp Image 2023-01-26 at 15.34.41.jpeg" alt="José's picture"></a>
+                        src="imgs/WhatsApp Image 2023-01-26 at 15.34.41.jpeg" alt="José's picture"></a>
                 <h2>José Protásio dos Santos</h2>
                 <p>Front-End Software Developer</p>
             </div>
@@ -87,12 +87,12 @@
         <div class="skills">
             <h2>Hard Skills</h2>
             <div class="imgTitle">
-                <img src="html-5.png" alt="">
-                <img src="css-3.png" alt="">
-                <img src="js.png" alt="">
-                <img src="science.png" alt="">
-                <img src="nodejss.png" alt="">
-                <img src="seleniumm.png" alt="">
+                <img src="imgs/html-5.png" alt="">
+                <img src="imgs/css-3.png" alt="">
+                <img src="imgs/js.png" alt="">
+                <img src="imgs/science.png" alt="">
+                <img src="imgs/nodejss.png" alt="">
+                <img src="imgs/seleniumm.png" alt="">
             </div>
         </div>
     </div>
@@ -136,7 +136,7 @@
         <div class="footerContent">
 
             <div class="logoFooter">
-                <a href="https://github.com/jose-protasio" target="_blank"><img src="joselogo.jpg" alt=""></a>
+                <a href="https://github.com/jose-protasio" target="_blank"><img src="imgs/joselogo.jpg" alt=""></a>
                 <p>José Protásio dos Santos</p>
             </div>
 
@@ -158,12 +158,12 @@
                 <h2>Follow me</h2>
                 <div>
                     <a href="https://www.facebook.com/profile.php?id=100015248027613" target="_blank"><img
-                            src="icons8-facebook-64.png" alt=""></a>
-                    <a href="https://github.com/jose-protasio" target="_blank"><img src="icons8-github-64.png"
+                            src="imgs/icons8-facebook-64.png" alt=""></a>
+                    <a href="https://github.com/jose-protasio" target="_blank"><img src="imgs/icons8-github-64.png"
                             alt=""></a>
                     <a href="https://www.linkedin.com/in/jos%C3%A9-prot%C3%A1sio-aabaab227/" target="_blank"><img
-                            src="icons8-linkedin-circundado-64.png" alt=""></a>
-                    <a href="https://www.instagram.com/zehsantoss/" target="_blank"><img src="icons8-instagram-64.png"
+                            src="imgs/icons8-linkedin-circundado-64.png" alt=""></a>
+                    <a href="https://www.instagram.com/zehsantoss/" target="_blank"><img src="imgs/icons8-instagram-64.png"
                             alt=""></a>
                 </div>
                 <p>Phone: (64) 993138737</p>
