--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>José's Profile Pro</title>
+    <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -39,17 +40,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https:wa.me/qr/U73AQLUIMS2D1" target="_blank">Contact me</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                More
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown">
+                            <button onclick="myFunction()" class="dropbtn">More</button>
+                            <div id="myDropdown" class="dropdown-content">
+                              <a href="todoList/index.html" target="_blank">To do List</a>
+                              <a href="#">Link 2</a>
+                              <a href="#">Link 3</a>
                             </div>
-                        </li>
+                          </div>
                     </ul>
                 </div>
             </nav>
