--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>José's Profile Pro</title>
     <script src="script.js"></script>
+    <script src="script.js"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -43,8 +53,8 @@
                         <div class="dropdown">
                             <button onclick="myFunction()" class="dropbtn">More</button>
                             <div id="myDropdown" class="dropdown-content">
-                              <a href="todoList/index.html" target="_blank">To do List</a>
-                              <a href="#">Link 2</a>
+                              <a href="todoList/index.html" title="Planeje seu dia aqui!" target="_blank">To do List</a>
+                              <a href="cadastro.html" title="Cadastre-se na minha NewsLetter e receba notícias em primeira mão sobre o mundo da tecnologia" target="_blank">Cadastre-se</a>
                               <a href="#">Link 3</a>
                             </div>
                           </div>
@@ -58,8 +68,10 @@
     <div class="content">
         <div class="coderContent">
             <div class="profileImg">
+                <div class="image-wrapper">
                 <a href="https://github.com/jose-protasio" target="_blank"><img
                         src="imgs/WhatsApp Image 2023-01-26 at 15.34.41.jpeg" alt="José's picture"></a>
+                    </div>
                 <h2>José Protásio dos Santos</h2>
                 <p>Front-End Software Developer</p>
             </div>
@@ -154,7 +166,7 @@
 
             <div class="follow">
                 <h2>Follow me</h2>
-                <div>
+                <div class="followImg">
                     <a href="https://www.facebook.com/profile.php?id=100015248027613" target="_blank"><img
                             src="imgs/icons8-facebook-64.png" alt=""></a>
                     <a href="https://github.com/jose-protasio" target="_blank"><img src="imgs/icons8-github-64.png"
@@ -173,15 +185,5 @@
 
     </div>
 </body>
-<script src="script.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
 
 </html>
